--- a/style.css
+++ b/style.css
@@ -1,14 +1,47 @@
-:root{
+@import url("styles/header.css");
+@import url("styles/banner.css");
+:root {
     --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54DEG, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
+    --azul: #002f52;
 }
 body {
-    background-color:var(--cor-de-fundo);
+    background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
-h1{
+h1 {
     background-color: white;
 }
-@import url ("style/heard.css");
-:root {
-    --cor-de-fundo:#EBECEE
-    --branco:# FFFFFF;
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+}
+.botoes {
+    display: flex;
+}
+.card {
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(red, green, blue, alpha);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+.descricao__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+.botoes__item {
+    margin: 0 0.5em;
+}
+.botoes__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
 }
